Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPvC/bPghnzxT8hgZ84hB6T",
+      "authorship_tag": "ABX9TyNv+l4cDa0fXy8ZBzdIALma",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6523,6 +6523,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cDVTm7vt31ih"
+      },
+      "source": [
+        "# AtCoder First 10"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dqV4h2Q8DU72",
@@ -6700,15 +6709,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "q9CWQg5FjqoY"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "KXhYgVI7wjRR"
       },
       "source": [
@@ -6807,7 +6807,7 @@
         "!echo $'28.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in putStrLn.bmiTell.(read::String->Float).concat.lines'\r\n",
         "!echo $'50.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in putStrLn.bmiTell.(read::String->Float).concat.lines'"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6842,53 +6842,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dfzkJZpYkkcJ",
-        "outputId": "16303c9a-2751-4e7c-fa81-594f6634806d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!echo $'85 1.90' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in print.bmiTell.map (read::String->Float).words.concat.lines'\r\n"
-      ],
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "<interactive>:0:238: error:\n",
-            "    • No instance for (RealFloat [Float])\n",
-            "        arising from a use of ‘bmiTell’\n",
-            "    • In the first argument of ‘(.)’, namely ‘bmiTell’\n",
-            "      In the second argument of ‘(.)’, namely\n",
-            "        ‘bmiTell . map (read :: String -> Float) . words . concat . lines’\n",
-            "      In the expression:\n",
-            "        print\n",
-            "        . bmiTell . map (read :: String -> Float) . words . concat . lines\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "4snmUBZ2lN4U",
-        "outputId": "e0fd4767-4938-48cb-c30f-b257440557ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ee030a44-3ee6-469b-f81d-301bfc39e9b0"
       },
       "source": [
-        "!echo $'85 1.90' | ghc -e $'getContents >>= let{bmiTell weight height | otherwise = \"a whale\";} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n"
+        "!echo $'85 1.90' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\";} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n",
+        "!echo $'100 1.10' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\";} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n",
+        "!echo $'50 1.70' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\";} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": 58,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\"a whale\"\n"
+            "\"Normal!\"\n",
+            "\"A whale\"\n",
+            "\"Emo!\"\n"
           ],
           "name": "stdout"
         }
@@ -6909,30 +6881,6 @@
         "id": "OlVrf4xGQLhh"
       },
       "source": [
-        "If no suitable guards or patterns are found, an error is thrown.\r\n",
-        "Of course we can use guards with functions that take as many\r\n",
-        "parameters as we want. Instead of having the user calculate\r\n",
-        "his own BMI before calling the function, let's modify this function\r\n",
-        "so that it takes a height and weight and calculates it for us.\r\n",
-        "\r\n",
-        "bmiTell :: (RealFloat a) => a -> a -> String  \r\n",
-        "bmiTell weight height  \r\n",
-        "   | weight / height ^ 2 <= 18.5 = \"You're underweight, youemo, you!\"  \r\n",
-        "   | weight / height ^ 2 <= 25.0 = \"You're supposedly normal.\r\n",
-        "Pffft, I bet you're ugly!\"  \r\n",
-        "   | weight / height ^ 2 <= 30.0 = \"You're fat! Lose some weight,fatty!\"  \r\n",
-        "   | otherwise                 = \"You're a whale, congratulations!\"  \r\n",
-        "   \r\n",
-        "Let's see if I'm fat ...\r\n",
-        "\r\n",
-        "ghci> bmiTell 85 1.90  \r\n",
-        "\r\n",
-        "\"You're supposedly normal. Pffft, I bet you're ugly!\"  \r\n",
-        "\r\n",
-        "Yay! I'm not fat! But Haskell just called me ugly. Whatever!\r\n",
-        "Note that there's no = right after the function name and its\r\n",
-        "parameters, before the first guard. Many newbies get syntax\r\n",
-        "errors because they sometimes put it there.\r\n",
         "\r\n",
         "Another very simple example: let's implement our own max function.\r\n",
         "If you remember, it takes two things that can be compared and\r\n",
