Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMkiRe7wtu3NdVv1QIvedCU",
+      "authorship_tag": "ABX9TyMGvDij096BUP/KzzWuJ8yv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6875,15 +6875,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2vLwUUBYATpQ"
-      },
-      "source": [
-        "# いまここ3"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -6915,11 +6906,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ePEGTNR4Rpzc",
-        "outputId": "11026906-266b-492f-df11-b42752530bda",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ePEGTNR4Rpzc",
+        "outputId": "11026906-266b-492f-df11-b42752530bda"
       },
       "source": [
         "# compare を実装する\r\n",
@@ -6947,11 +6938,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3fFXfc3WSrHe",
-        "outputId": "811160ff-31c4-4872-840a-264962902bc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3fFXfc3WSrHe",
+        "outputId": "811160ff-31c4-4872-840a-264962902bc2"
       },
       "source": [
         "# where はコマンドラインワンライナーで使えるか\r\n",
@@ -6977,11 +6968,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ofASktnlb5HG",
-        "outputId": "0f8d2769-43b9-49fc-e613-1709f2dca66e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ofASktnlb5HG",
+        "outputId": "0f8d2769-43b9-49fc-e613-1709f2dca66e"
       },
       "source": [
         "# where の中で複数の分が使えるか => 使える\r\n",
@@ -7001,11 +6992,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QgxAmZ3HcOhI",
-        "outputId": "37fe170c-917e-47c5-b77f-a853d86c3b44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QgxAmZ3HcOhI",
+        "outputId": "37fe170c-917e-47c5-b77f-a853d86c3b44"
       },
       "source": [
         "# where の中でパターンマッチングが使える\r\n",
@@ -7025,11 +7016,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JDEixwXqck3B",
-        "outputId": "ad92c126-5682-41da-bb57-c24477e561f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JDEixwXqck3B",
+        "outputId": "ad92c126-5682-41da-bb57-c24477e561f8"
       },
       "source": [
         "# 名前を入れるとイニシャルを返すプログラム\r\n",
@@ -7049,30 +7040,76 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "vCbEXnQxqfVx",
+        "outputId": "86c68c47-f624-4143-db87-72943d0b8b1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# where の中で関数を定義する\r\n",
+        "# calcBmis :: (RealFloat a) => [(a, a)] -> [a]  \r\n",
+        "# calcBmis xs = [bmi w h | (w, h) <- xs]  \r\n",
+        "#    where bmi weight height = weight / height ^ 2  \r\n",
+        "\r\n",
+        "!echo '50 1.70' | ghc -e $'getContents >>= let {calcBmis::(RealFloat a)=>[(a,a)]->[a]; calcBmis xs=[bmi w h | (w, h) <- xs] where bmi weight height = weight / height ^ 2;} in print.(\\[x, y] -> calcBmis [(x,y)]).map (read::String->Float).words.concat.lines'"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[17.301037]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TZTTCrJCtmvl"
+      },
+      "source": [
+        "let と where の違い\r\n",
+        "\r\n",
+        "let は式 (expression) なのでどこででも使えるが、where はただの構文なので使える場所が限られる。 しかし、where は guard をまたがって使えるのに対し、let はそのような使い方はできない。 local にしか使えない。 という違いがある。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RCvVX8Gvukck"
+      },
+      "source": [
+        "# let を使って、円筒の高さと半径から表面積を求める\r\n",
+        "# cylinder :: (RealFloat a) => a -> a -> a  \r\n",
+        "# cylinder r h = \r\n",
+        "#    let sideArea = 2 * pi * r * h  \r\n",
+        "#        topArea = pi * r ^2  \r\n",
+        "#    in  sideArea + 2 * topArea  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GocGQqROuytQ"
+      },
+      "source": [
+        "# いまここ3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "OlVrf4xGQLhh"
       },
       "source": [
-        "\r\n",
-        "Just like we've defined constants in where blocks, you can also\r\n",
-        "define functions. Staying true to our healthy programming theme,\r\n",
-        "let's make a function that takes a list of weight-height pairs\r\n",
-        "and returns a list of BMIs.\r\n",
-        "\r\n",
-        "calcBmis :: (RealFloat a) => [(a, a)] -> [a]  \r\n",
-        "calcBmis xs = [bmi w h | (w, h) <- xs]  \r\n",
-        "   where bmi weight height = weight / height ^ 2  \r\n",
-        "And that's all there is to it! The reason we had to introduce\r\n",
-        "bmi as a function in this example is because we can't just calculate\r\n",
-        "one BMI from the function's parameters. We have to examine the\r\n",
-        "list passed to the function and there's a different BMI for\r\n",
-        "every pair in there.\r\n",
-        "\r\n",
-        "where bindings can also be nested. It's a common idiom to make\r\n",
-        "a function and define some helper function in its where clause\r\n",
-        "and then to give those functions helper functions as well, each\r\n",
-        "with its own where clause.\r\n",
-        "\r\n",
         "Let it be\r\n",
+        "\r\n",
+        "\r\n",
         "Very similar to where bindings are let bindings. Where bindings\r\n",
         "are a syntactic construct that let you bind to variables at\r\n",
         "the end of a function and the whole function can see them, including\r\n",
@@ -7089,7 +7126,9 @@
         "   let sideArea = 2 * pi * r * h  \r\n",
         "       topArea = pi * r ^2  \r\n",
         "   in  sideArea + 2 * topArea  \r\n",
+        "\r\n",
         "let it be\r\n",
+        "\r\n",
         "The form is let <bindings> in <expression>. The names that you\r\n",
         "define in the let part are accessible to the expression after\r\n",
         "the in part. As you can see, we could have also defined this\r\n",
