Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMGvDij096BUP/KzzWuJ8yv",
+      "authorship_tag": "ABX9TyMxkbpUOyydF42NCMW5oMIr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6861,7 +6861,7 @@
         "!echo $'100 1.10' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\";} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n",
         "!echo $'50 1.70' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\";} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6892,7 +6892,7 @@
         "\r\n",
         "!echo '3 8.4' |ghc -e $'getContents >>= let {max01::(Ord a)=>a->a->a; max01 a b | a > b = a | otherwise = b ;} in print.(\\[x,y] -> max01 x y).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6923,7 +6923,7 @@
         "!echo '3 2' |ghc -e $'getContents >>= let {compare01::(Ord a)=>a->a->Ordering; compare01 a b | a > b = GT| a==b = EQ | otherwise = LT ;} in print.(\\[x,y] -> compare01 x y).map (read::String->Float).words.concat.lines'\r\n",
         "!echo '3 3' |ghc -e $'getContents >>= let {compare01::(Ord a)=>a->a->Ordering; compare01 a b | a > b = GT| a==b = EQ | otherwise = LT ;} in print.(\\[x,y] -> compare01 x y).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6952,7 +6952,7 @@
         "!echo $'100 1.10' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\" where bmi = weight / height ^ 2 ;} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n",
         "!echo $'50 1.70' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\" where bmi = weight / height ^ 2 ;} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6978,7 +6978,7 @@
         "# where の中で複数の分が使えるか => 使える\r\n",
         "!echo $'100 1.10' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=skinny=\"Emo!\"|weight/height^2<=normal=\"Normal!\"|weight/height^2<=fat=\"Fat!\"| otherwise = \"A whale\" where {bmi = weight / height ^ 2; skinny = 18.5; normal = 25.0; fat=30.0;} ;} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7002,7 +7002,7 @@
         "# where の中でパターンマッチングが使える\r\n",
         "!echo $'100 1.10' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=skinny=\"Emo!\"|weight/height^2<=normal=\"Normal!\"|weight/height^2<=fat=\"Fat!\"| otherwise = \"A whale\" where {bmi = weight / height ^ 2; (skinny, normal, fat) = (18.5, 25.0, 30.0);} ;} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7026,7 +7026,7 @@
         "# 名前を入れるとイニシャルを返すプログラム\r\n",
         "!echo $'Harrison Ford' | ghc -e $'getContents >>= let{initials::String->String->String; initials firstname lastname  =  [f]++\". \"++[l] where {(f:_)=firstname; (l:_)=lastname;} ;} in putStrLn.(\\[x, y] -> initials x y).words.concat.lines'"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7041,10 +7041,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vCbEXnQxqfVx",
-        "outputId": "86c68c47-f624-4143-db87-72943d0b8b1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86c68c47-f624-4143-db87-72943d0b8b1e"
       },
       "source": [
         "# where の中で関数を定義する\r\n",
@@ -7054,7 +7054,7 @@
         "\r\n",
         "!echo '50 1.70' | ghc -e $'getContents >>= let {calcBmis::(RealFloat a)=>[(a,a)]->[a]; calcBmis xs=[bmi w h | (w, h) <- xs] where bmi weight height = weight / height ^ 2;} in print.(\\[x, y] -> calcBmis [(x,y)]).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7079,7 +7079,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RCvVX8Gvukck"
+        "id": "6KbP-jqkLbex"
+      },
+      "source": [
+        "%%capture\r\n",
+        "!apt install haskell-platform"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RCvVX8Gvukck",
+        "outputId": "09d5cbca-f8c2-4c26-931e-9994bbf57035",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# let を使って、円筒の高さと半径から表面積を求める\r\n",
@@ -7087,10 +7103,23 @@
         "# cylinder r h = \r\n",
         "#    let sideArea = 2 * pi * r * h  \r\n",
         "#        topArea = pi * r ^2  \r\n",
-        "#    in  sideArea + 2 * topArea  "
+        "#    in  sideArea + 2 * topArea  \r\n",
+        "!echo $'3.0 10.0' |ghc -e $'getContents >>= print.map (read::String->Float).words.concat.lines'\r\n",
+        "!echo\r\n",
+        "!echo $'3.0 10.0' |ghc -e $'getContents >>= let {cylinder::(RealFloat a)=>a->a->a; cylinder r h = let {sideArea=2*pi*r*h;topArea=pi*r^2} in sideArea+2*topArea} in print.(\\[x, y] -> cylinder x y).map (read::String->Float).words.concat.lines'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[3.0,10.0]\n",
+            "\n",
+            "245.04422\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -7107,28 +7136,6 @@
         "id": "OlVrf4xGQLhh"
       },
       "source": [
-        "Let it be\r\n",
-        "\r\n",
-        "\r\n",
-        "Very similar to where bindings are let bindings. Where bindings\r\n",
-        "are a syntactic construct that let you bind to variables at\r\n",
-        "the end of a function and the whole function can see them, including\r\n",
-        "all the guards. Let bindings let you bind to variables anywhere\r\n",
-        "and are expressions themselves, but are very local, so they\r\n",
-        "don't span across guards. Just like any construct in Haskell\r\n",
-        "that is used to bind values to names, let bindings can be used\r\n",
-        "for pattern matching. Let's see them in action! This is how\r\n",
-        "we could define a function that gives us a cylinder's surface\r\n",
-        "area based on its height and radius:\r\n",
-        "\r\n",
-        "cylinder :: (RealFloat a) => a -> a -> a  \r\n",
-        "cylinder r h = \r\n",
-        "   let sideArea = 2 * pi * r * h  \r\n",
-        "       topArea = pi * r ^2  \r\n",
-        "   in  sideArea + 2 * topArea  \r\n",
-        "\r\n",
-        "let it be\r\n",
-        "\r\n",
         "The form is let <bindings> in <expression>. The names that you\r\n",
         "define in the let part are accessible to the expression after\r\n",
         "the in part. As you can see, we could have also defined this\r\n",
