Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNXDH+FIVmMrmVt6KhfN9hZ",
+      "authorship_tag": "ABX9TyPtq25aOaqxVQFR0CGE+lbN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,16 +82,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "uFBBZYLDS8Ed",
-        "outputId": "70864806-6b7f-45cb-daa9-15b4bee651c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "70864806-6b7f-45cb-daa9-15b4bee651c2"
       },
       "source": [
         "# インストールされたことの確認\n",
         "!ghc --version"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7122,15 +7122,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GocGQqROuytQ"
-      },
-      "source": [
-        "# いまここ3"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "jB7MFjKgzyfu",
@@ -7191,7 +7182,7 @@
         "!echo '50 1.70' | ghc -e $'getContents >>= let {calcBmis::(RealFloat a)=>[(a,a)]->[a]; calcBmis xs=[bmi | (w, h) <- xs, let bmi=w/h^2];} in print.(\\[x, y] -> calcBmis [(x,y)]).map (read::String->Float).words.concat.lines'\n",
         "!echo $'50 1.70\\n100 1.1' | ghc -e $'getContents >>= let {calcBmis::(RealFloat a)=>[(a,a)]->[a]; calcBmis xs=[bmi | (w, h) <- xs, let bmi=w/h^2];} in print.map (\\[x, y] -> calcBmis [(x,y)]).map (map (read::String->Float).words).lines'\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7209,17 +7200,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ks4Guo9Bq8ZI",
-        "outputId": "ce3baf69-4d3a-46d5-dd36-9785bb97b499",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ce3baf69-4d3a-46d5-dd36-9785bb97b499"
       },
       "source": [
         "# list の中で bmi が 25.0 以上という条件を入れることはできる\n",
         "# しかし、filter に let は使えない。なぜなら順序が逆になるから。 値を得る前に処理はできない。\n",
         "!echo $'50 1.70\\n100 1.1' | ghc -e $'getContents >>= let {calcBmis::(RealFloat a)=>[(a,a)]->[a]; calcBmis xs=[bmi | (w, h) <- xs, let bmi=w/h^2, bmi >= 25.0];} in print.map (\\[x, y] -> calcBmis [(x,y)]).map (map (read::String->Float).words).lines'\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7245,10 +7236,32 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "GocGQqROuytQ"
+      },
+      "source": [
+        "# いまここ3"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "IgpeQKk8sWE4"
       },
       "source": [
         "# case 式"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "APgfV6s7am-5"
+      },
+      "source": [
+        "C, C++, Java など命令形プログラミング言語は case 構文があり、同じようなことを haskell の case expression が行うが、式 (expression) という名前が示すように、haskell では case は式であり、if else や let で見たようにどこでも使え、値を返すだけでなく、パターンマッチングができる。\n",
+        "\n",
+        "実際、関数定義におけるパターンマッチングは case式の糖衣構文なのである。\n",
+        "\n",
+        "次の2つの"
       ]
     },
     {
