Colaboratory を使用して作成しました

--- a/arabic01.ipynb
+++ b/arabic01.ipynb
@@ -83,7 +83,7 @@
       "source": [
         "これを利用して、アラビア語の勉強をする。\r\n",
         "\r\n",
-        "とりあえずduokingoのtipsを読み直そうという計画。"
+        "とりあえずduolingoのtipsを読み直そうという計画。"
       ]
     },
     {
@@ -4604,7 +4604,7 @@
         "    document.getElementById(\"maintable\").appendChild(table);\r\n",
         "</script>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4784,7 +4784,7 @@
         "    document.getElementById(\"maintable\").appendChild(table);\r\n",
         "</script>"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4966,7 +4966,7 @@
         "    document.getElementById(\"maintable\").appendChild(table);\r\n",
         "</script>"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
