Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPGEo35sPPWruXflAeQmTqq",
+      "authorship_tag": "ABX9TyPu9RXhaHCgEo4S/CeuI9r8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6807,15 +6807,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1nllqupq8YXt"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "xPBTv1fMoDap",
@@ -6830,7 +6821,7 @@
         "# Alice と Bob は交互に 1 枚ずつカードを取っていく。\n",
         "# すべてのカードを取ったときゲームは終了し、取ったカードの数の合計がその人の得点になる。2 人とも自分\n",
         "# の得点を最大化するように最適戦略をとったとき、Alice は Bob より何点多くの得点を獲得できるか。\n",
-        "# 問題文意味不明。\n",
+        "# 問題文意味不明。 解答を見て、趣旨がわかった。\n",
         "# main = do\n",
         "#     getLine\n",
         "#     a_s <- map read . words <$> getLine\n",
@@ -6842,7 +6833,7 @@
         "!echo $'3 \\n2 7 4' |ghc -e $'getContents >>= print.reverse.Data.List.sort.map (read::String->Int).words.concat.tail.lines'\n",
         "!echo $'3 \\n2 7 4' |ghc -e $'getContents >>= print.sum.zipWith (*) (cycle [1, -1]).reverse.Data.List.sort.map (read::String->Int).words.concat.tail.lines'\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6861,14 +6852,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "DbA04VzuIp_U",
-        "outputId": "43e49523-294c-4211-be9b-3e045303aba8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "43e49523-294c-4211-be9b-3e045303aba8"
       },
       "source": [
         "# atcoderfirstten07 Kagami Mochi\r\n",
         "# N 個の整数 d[0],d[1],…,d[N−1]d[0],d[1],…,d[N−1] の中に何種類の異なる値があるか。\r\n",
+        "# 問題も解答もよくわからないが、集合 Data.Set を使えばいいだけなのではないか?\r\n",
         "# import Control.Monad\r\n",
         "# import Data.List\r\n",
         "# main = do\r\n",
@@ -6881,7 +6873,7 @@
         "# Set は使えるか\r\n",
         "!echo $'6 2 7 2 8 7 8' |ghc -e $'getContents >>= print.length.Data.Set.fromList.tail.words.concat.lines'\r\n"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6895,61 +6887,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1nllqupq8YXt"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aUxI7acMTmKS"
+      },
+      "source": [
+        "# atcoderfirstten08 Otoshidama\n",
+        "# 10000 円札と、5000 円札と、1000 円札が合計で N 枚、y 円のとき、\n",
+        "# 枚数の組を 1 つ求める。 存在しない場合は -1 -1 -1 と出力する。\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hGrr9YNPB0mx"
       },
       "source": [
-        "# import Control.Monad\r\n",
-        "# import Data.List\r\n",
-        "# main = do\r\n",
-        "#     n <- readLn\r\n",
-        "#     ds <- replicateM n readLn\r\n",
-        "#     print $ length $ group $ sort\r\n",
-        "#     (ds :: [Integer])\r\n",
-        "\r\n",
-        "replicateM k mは、I/Oアクションmをk回行い\r\n",
-        "、それぞれの結果をまとめたリストを結果とするI/Oアクション\r\n",
-        "です。replicateMはControl.Monadに定義\r\n",
-        "されているので、予めimportしておきましょう。\r\n",
-        "\r\n",
-        "これをsortしてやるのですが、その際にdsが整数のリストで\r\n",
-        "あるという情報も提供しておきましょう。そのための記述が:: \r\n",
-        "[Integer]で、これがないと型推論が失敗します。\r\n",
-        "\r\n",
-        "次に、groupという関数を使います。これは公式に載っている\r\n",
-        "例が分かりやすいので引用すると、\r\n",
-        "\r\n",
-        "group \"Mississippi\" = [\"M\",\"i\",\r\n",
-        "\"ss\",\"i\",\"ss\",\"i\",\"pp\",\"i\"]\r\n",
-        "というように、隣り合っている同一の値をグループ化してくれます\r\n",
-        "。\r\n",
-        "\r\n",
-        "これのlengthをprintすれば完了です。\r\n",
-        "\r\n",
         "8問目 ABC085C Otoshidama\r\n",
         "10000 円札と、5000 円札と、1000 円札が合計で NN 枚あって、\r\n",
         "合計金額が YY 円であったという。このような条件を満たす\r\n",
         "各金額の札の枚数の組を 1 つ求めなさい。そのような状況が存在し得ない場合には -1 -1 -1 と出力しなさい。\r\n",
         "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "私のコード（↓）は実行速度が比較的早い(1msだった)のです\r\n",
-        "が、長いので解説には用いず、\r\n",
-        "\r\n",
         "main = do\r\n",
-        " [n, y] <- map read . words <$\r\n",
-        "> getLine\r\n",
+        " [n, y] <- map read . words <$> getLine\r\n",
         " let u = y `div` 1000 - n\r\n",
         " case analyze u of\r\n",
-        "  Nothing -> putStrLn \"-1 -1 -1\r\n",
-        "\"\r\n",
-        "  Just (a,b) -> putStrLn $ \r\n",
-        "   if n-a-b < 0 then \"-1 -1 -1\r\n",
-        "\" else unwords $ map show [a,b,n\r\n",
-        "-a-b]\r\n",
+        "  Nothing -> putStrLn \"-1 -1 -1\"\r\n",
+        "  Just (a,b) -> putStrLn $ if n-a-b < 0 then \"-1 -1 -1\" else unwords $ map show [a,b,n-a-b]\r\n",
         "\r\n",
         "analyze :: Integer -> Maybe(Integer,Integer)\r\n",
         "analyze u\r\n",
@@ -6963,6 +6941,7 @@
         "\r\n",
         "foo u = [(a,b) | a <- [0..7], b\r\n",
         " <- [0..8], 9*a+4*b == u]\r\n",
+        "\r\n",
         "これまたIamnoob様のコードで解説させていただきます。\r\n",
         "\r\n",
         "main = do\r\n",
@@ -6975,6 +6954,8 @@
         " putStrLn $ unwords $ map show\r\n",
         " $ if null ans then [-1, -1, -1]\r\n",
         " else head ans\r\n",
+        "\r\n",
+        "\r\n",
         "3行目はリスト内包表記で全探索をしていますが、a+b+c=na\r\n",
         "+b+c=n かつ c≥0c≥0 なので n−a≥bn−a≥b\r\n",
         " が必要になります。そのため、aの範囲は[0 .. n]です\r\n",
@@ -6990,6 +6971,9 @@
         "関数\r\n",
         "head: リストの先頭要素を返す関数\r\n",
         "を解説すれば十分でしょう。\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
         "\r\n",
         "9問目 ABC049C 白昼夢 / Daydream\r\n",
         "英小文字からなる文字列 SS が与えられます。\r\n",
