Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPu9RXhaHCgEo4S/CeuI9r8",
+      "authorship_tag": "ABX9TyOeJCY0RweHK9rUmx1O7+1U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6898,18 +6898,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aUxI7acMTmKS"
+        "id": "QV8hAkNCbZT-"
+      },
+      "source": [
+        "%%capture\n",
+        "!apt install haskell-platform"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aUxI7acMTmKS",
+        "outputId": "8336a7a5-52c7-4d6f-aa75-7d77ce1c2dad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# atcoderfirstten08 Otoshidama\n",
         "# 10000 円札と、5000 円札と、1000 円札が合計で N 枚、y 円のとき、\n",
         "# 枚数の組を 1 つ求める。 存在しない場合は -1 -1 -1 と出力する。\n",
+        "# main = do\n",
+        "#     [n, y] <- map read . words <$> getLine\n",
+        "#     let ans = [[a, b, c] | a <- [0 .. n], b <- [0 .. (n - a)], let c = n - a - b, 10000 * a + 5000 * b + 1000 * c == y]\n",
+        "#     putStrLn $ unwords $ map show $ if null ans then [-1, -1, -1] else head ans\n",
         "\n",
-        "\n",
-        "\n"
+        "!echo $'2 5'\n",
+        "!echo $'2 5' | ghc -e $'getContents >>= print.map (read::String->Int).words'\n",
+        "# !echo $'2 5' | ghc -e $'getContents >>= print.map (read::String->Int).words'\n",
+        "!ghc -e $'putStrLn(unwords(map show [-1,-1,-1]))'\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2 5\n",
+            "[2,5]\n",
+            "-1 -1 -1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -6944,16 +6976,10 @@
         "\r\n",
         "これまたIamnoob様のコードで解説させていただきます。\r\n",
         "\r\n",
-        "main = do\r\n",
-        " [n, y] <- map read . words <$\r\n",
-        "> getLine\r\n",
-        " let ans = [[a, b, c] | a <- [0\r\n",
-        " .. n], b <- [0 .. (n - a)], let\r\n",
-        " c = n - a - b, 10000 * a + 5000\r\n",
-        " * b + 1000 * c == y]\r\n",
-        " putStrLn $ unwords $ map show\r\n",
-        " $ if null ans then [-1, -1, -1]\r\n",
-        " else head ans\r\n",
+        "# main = do\r\n",
+        "#     [n, y] <- map read . words <$> getLine\r\n",
+        "#     let ans = [[a, b, c] | a <- [0 .. n], b <- [0 .. (n - a)], let c = n - a - b, 10000 * a + 5000 * b + 1000 * c == y]\r\n",
+        "#     putStrLn $ unwords $ map show $ if null ans then [-1, -1, -1] else head ans\r\n",
         "\r\n",
         "\r\n",
         "3行目はリスト内包表記で全探索をしていますが、a+b+c=na\r\n",
