--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOQXSmEpnCrCPvbMBFRmtx5",
+      "authorship_tag": "ABX9TyMaVsuuWD2MUxgHY7M+LXPk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "# インストールされたことの確認\n",
         "!ghc --version"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6898,11 +6898,23 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "2ji5XbgWclbl"
+      },
+      "source": [
+        "# check\r\n",
+        "# point free if haskell"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "aUxI7acMTmKS",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5f459f0b-3c04-4669-a13c-7188b34d424a"
+        "outputId": "b3e7d127-b135-4be5-f605-75a6872aa7f6"
       },
       "source": [
         "# atcoderfirstten08 Otoshidama\n",
@@ -6920,9 +6932,11 @@
         "# コマンドラインワンライナーで if は使えるか => 使える\n",
         "!ghc -e $'if True then do {putStrLn \"Yes!!!!\";} else putStrLn \"Oh, no!!!!\"'\n",
         "!echo $'3 16000' | ghc -e $'getContents >>= print.(\\[n,x] -> [[a,b,c] | a <- [0 .. n], b <- [0 .. (n - a)], let c = n - a - b, 10000 * a + 5000 * b + 1000 * c == x]).map (read::String->Int).words'\n",
-        "\n"
+        "!echo $'3 16000' | ghc -e $'getContents >>= putStrLn.unwords.map show.concat.(\\[n,x] -> [[a,b,c] | a <- [0 .. n], b <- [0 .. (n - a)], let c = n - a - b, 10000 * a + 5000 * b + 1000 * c == x]).map (read::String->Int).words'\n",
+        "!echo $'4 17000' | ghc -e $'getContents >>= putStrLn.unwords.map show.concat.(\\[n,x] -> [[a,b,c] | a <- [0 .. n], b <- [0 .. (n - a)], let c = n - a - b, 10000 * a + 5000 * b + 1000 * c == x]).map (read::String->Int).words'\n",
+        "!echo $'4 18000' | ghc -e $'getContents >>= putStrLn.unwords.map show.concat.(\\[n,x] -> [[a,b,c] | a <- [0 .. n], b <- [0 .. (n - a)], let c = n - a - b, 10000 * a + 5000 * b + 1000 * c == x]).map (read::String->Int).words'\n"
       ],
-      "execution_count": 22,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -6931,7 +6945,37 @@
             "[3,16000]\n",
             "-1 -1 -1\n",
             "Yes!!!!\n",
-            "[[1,1,1]]\n"
+            "[[1,1,1]]\n",
+            "1 1 1\n",
+            "1 1 2\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9PhrJ8nAXz-o",
+        "outputId": "4cb643eb-e175-4c99-f537-48e9e184cef9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e 'unwords(map show(concat([[1,1,1]])))'\r\n",
+        "!ghc -e 'putStrLn(unwords(map show(concat([[]]))))'\r\n",
+        "!ghc -e '[[a,b,c] | a <- [0 .. 3], b <- [0 .. (3 - a)], let c = 3 - a - b, 10000 * a + 5000 * b + 1000 * c == 16000]'\r\n"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"1 1 1\"\n",
+            "\n",
+            "[]\n"
           ],
           "name": "stdout"
         }
